Refactor Integer assignments and CSV handling
Replaced deprecated `new Integer()` with `Integer.valueOf()`.
Refactored CSV generation to use OpenCSV's `CSVWriter` for RFC 4180 compliance. Added proper escaping for quotes, commas, and newlines. Removed unused code and redundant comments for better readability.

Signed-off-by: TDeSain <thomas.n.desain@gmail.com>